--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -10,7 +10,13 @@
         <title>Document</title>
     </head>
 <body>
-    <h1 class="lightseagreen">The RPG Inventory</h1>
+    <style>
+        body {
+            background-image: url("/img/6DaLb9y.jpeg");
+            background-size: contain;
+        }
+    </style>
+    <h1 class="yellow">The RPG Inventory</h1>
 
     <br>
     <br>
