--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,6 +12,23 @@
         <title>Login</title>
     </head>
 <body>
+    <style>
+        body {
+            
+            background-image: url("/img/6DaLb9y.jpeg");
+            background-size: cover;
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 180px;
+        }
+
+        form {
+            margin-left: 580px;
+            
+        }
+    </style>
     <h1>Login</h1>
 
     <ul>
