--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,6 +12,24 @@
         <title>Document</title>
     </head>
 <body>
+    <style>
+        body {
+            
+            background-image: url("/img/6DaLb9y.jpeg");
+            background-size: cover;
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 130px;
+        }
+
+        form {
+            margin-left: 580px;
+            
+        }
+    </style>
+
     <h1>Register</h1>
 
     <ul>
