--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,10 +26,11 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <%- include('include/_show') %>
+                    
+                    <%- include('include/_show', { users: [{email: req.body.email}] }) %>
                 </tbody>
                 <body><a href="/users/logout">Logout</a>
-                    <h1>Hello <%= user.charAt(0).toUpperCase() + user.slice(1) %></h1>
+                    <h1>Hello </h1>
                 </body>
             </table>
          </form>
